// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluggableColumnChart Sort config should provide attribute normal sort as default sort, attribute area and measure sort as available sorts for 2M + 1VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide attribute normal sort as default sort, attribute normal and attribute area available sorts for 1M + 1VB + 1SB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide attribute normal sort as default sort, attribute normal and attribute area available sorts for 1M + 2VB + 1SB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a2",
      },
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide attribute normal sort as default sort, attribute normal and measure sort as available sorts for 1M + 1VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": false,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide attribute normal sort as default sort, one attribute area and two measure sorts as available sorts for 2 stacked M + 1VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide attribute normal sorts as default sort, two attribute normal, one area sort and one measure sort as available sort for 1M + 2 VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
    Object {
      "attributeSort": Object {
        "areaSortEnabled": false,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a2",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide two attribute normal sorts as default sort, two attribute area and one measure sorts as available sorts for 2 stacked M + 2VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a2",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;

exports[`PluggableColumnChart Sort config should provide two attribute normal sorts as default sort, two attribute area and one measure sorts as available sorts for 2M + 2VB 1`] = `
Object {
  "appliedSort": Array [],
  "availableSorts": Array [
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a1",
      },
    },
    Object {
      "attributeSort": Object {
        "areaSortEnabled": true,
        "normalSortEnabled": true,
      },
      "itemId": Object {
        "localIdentifier": "a2",
      },
      "metricSorts": Array [
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m1",
              },
            },
          ],
          "type": "measureSort",
        },
        Object {
          "locators": Array [
            Object {
              "measureLocatorItem": Object {
                "measureIdentifier": "m2",
              },
            },
          ],
          "type": "measureSort",
        },
      ],
    },
  ],
  "defaultSort": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a1",
        "direction": "asc",
      },
    },
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a2",
        "direction": "asc",
      },
    },
  ],
  "disabled": false,
  "supported": true,
}
`;
